[refactor] 포메팅 적용